<resources>
    <string name="app_name">App lista alunos</string>
    <string name="txt_hint_edit_Nome">Primeiro Nome</string>
    <string name="txt_hint_edit_Sobrenomes">Sobrenome</string>
    <string name="txt_hint_edit_Matriculas">Matricula</string>
    <string name="txt_hint_edit_CPF">CPF</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
</resources>